Completed services section. Added more detail to enhance the services section and also fixed a bug where the flex-container would not wrap images.

--- a/styles/breakpoints.css
+++ b/styles/breakpoints.css
@@ -9,6 +9,9 @@
     .hero {
         height: 40vh;
     }
+    .flex-container {
+        flex-wrap: wrap;
+    }
 }
 
 /* Tablet */
@@ -18,6 +21,9 @@
     }
     .nav-menu {
         display: none;
+    }
+    .flex-container {
+        flex-wrap: wrap;
     }
 }
 
