--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,11 @@ h3 {
     font-weight: 700;
 }
 
+.image {
+    border-radius: 1rem;
+    min-width: 20vw;
+}
+
 .site-width {
     margin: 0 20%;
 }
@@ -39,7 +44,11 @@ h3 {
 }
 
 .spacing {
-    margin-top: 3rem;
+    margin-top: 4rem;
+}
+
+.content-spacing {
+    padding-top: 2rem;
 }
 
 .flex-container {
@@ -51,7 +60,8 @@ h3 {
 }
 
 .flex-container-item {
-    flex: 1 1 0;
+    flex: 1;
+    min-width: 300px;
 }
 
 .desktop-nav {
@@ -187,7 +197,7 @@ h3 {
     gap: 1rem;
 }
 
-.box-1, .box-2, .box-3, .box-4 {
+.box-1, .box-2, .box-3 {
     background-color: var(--primary-color);
     border-radius: 1rem;
     flex-direction: column;
@@ -197,13 +207,13 @@ h3 {
 }
 
 .services-icon {
-    font-size: 4rem;
+    font-size: 3rem;
     color: var(--text-secondary-color);
 }
 
 .services-header {
     align-items: center;
-    gap: 1.5rem;
+    gap: 1rem;
 }
 
 .services-callout {
@@ -225,7 +235,17 @@ h3 {
     line-height: 1.5;
 }
 
-.services-content h1 {
+.section-text {
+    font-size: 1.125rem;
+    line-height: 1.5;
+}
+
+.section-content h2 {
     color: var(--primary-color);
     text-align: center;
+}
+
+.section-desc {
+    align-items: start;
+    gap: 1rem;
 }
